--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "axios": "^0.18.0",
     "dotenv": "^6.1.0",
     "react": "^16.6.3",
+    "react-cookie": "^3.0.7",
     "react-dom": "^16.6.3",
     "react-scripts": "2.1.1"
   },
