--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "axios": "^0.18.0",
     "dotenv": "^6.1.0",
+    "node-sass": "^4.11.0",
     "react": "^16.6.3",
     "react-cookie": "^3.0.7",
     "react-dom": "^16.6.3",
